<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_logout">Log out</string>
    <string name="action_sync_cancel">Cancel all downloads</string>
    <string name="action_sync_first_10">Download top 10</string>
    <string name="action_sync_first_100">Download top 100</string>
    <string name="action_sync_first_50">Download top 50</string>
    <string name="action_sync_first_n">Download top n…</string>

    <string name="album_list_item_empty">Empty…</string>
    <string name="album_list_item_my_music">My music</string>
    <string name="album_list_item_playlists">Playlists</string>

    <string name="app_name">VK Music Sync</string>

    <string name="audio_list_item_progress_template" formatted="false">%.2f Mb / %.2f Mb</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>

    <string name="error_need_re_login">Need re-login</string>
    <string name="error_no_internet_access">No internet access</string>

    <string name="message_already_downloaded">This track has been already downloaded. Do you want to overwrite it?</string>
    <string name="message_delete_file" formatted="false">Are you sure to delete file %s?</string>
    <string name="message_cancel_all_downloads">Cancel all downloads?</string>
    <string name="message_cancel_download">Cancel download?</string>
    <string name="message_sync_first_n">Type number of songs.\n(0 - download all of your music, may take a long time)</string>

    <string name="notification_download_all_canceled">All downloads canceled</string>
    <string name="notification_download_all_complete_template" formatted="false">All downloads complete (%d / %d)</string>
    <string name="notification_download_canceled">Download canceled</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_error">Download error</string>
    <string name="notification_progress_template" formatted="false">%.1f Mb / %.1f Mb (%d / %d)</string>

    <string name="search">Search</string>
    <string name="search_title">Search...</string>

    <string name="title_activity_login">Login</string>

</resources>
